Fix manifest for copying templates and static on setup.py install

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-recursive-include coop_bar/static *
-recursive-include coop_bar/templates *
+recursive-include colorbox/static *
+recursive-include colorbox/templates *
